--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - v[0-9]+.*
 
 jobs:
-  create-release:
+  linux-create-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,7 +18,7 @@ jobs:
           # (required) GitHub token for creating GitHub Releases.
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
-  upload-assets:
+  linux-upload-assets:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -26,6 +26,29 @@ jobs:
         with:
           # (required) Binary name (non-extension portion of filename) to build and upload.
           bin: reverse-proxy
+        env:
+          # (required) GitHub token for uploading assets to GitHub Releases.
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+  win-create-release:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: taiki-e/create-gh-release-action@v1
+        with:
+          # (optional) Path to changelog.
+          changelog: CHANGELOG.md
+        env:
+          # (required) GitHub token for creating GitHub Releases.
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+
+  win-upload-assets:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: taiki-e/upload-rust-binary-action@v1
+        with:
+          # (required) Binary name (non-extension portion of filename) to build and upload.
+          bin: reverse-proxy.exe
         env:
           # (required) GitHub token for uploading assets to GitHub Releases.
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
