--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - v[0-9]+.*
 
 jobs:
-  linux-create-release:
+  create-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,37 +18,22 @@ jobs:
           # (required) GitHub token for creating GitHub Releases.
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
-  linux-upload-assets:
-    runs-on: ubuntu-latest
+  upload-assets:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           # (required) Binary name (non-extension portion of filename) to build and upload.
           bin: reverse-proxy
-        env:
-          # (required) GitHub token for uploading assets to GitHub Releases.
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-  win-create-release:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: taiki-e/create-gh-release-action@v1
-        with:
-          # (optional) Path to changelog.
-          changelog: CHANGELOG.md
-        env:
-          # (required) GitHub token for creating GitHub Releases.
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-
-  win-upload-assets:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: taiki-e/upload-rust-binary-action@v1
-        with:
-          # (required) Binary name (non-extension portion of filename) to build and upload.
-          bin: reverse-proxy.exe
+          tar: unix
+          zip: windows
         env:
           # (required) GitHub token for uploading assets to GitHub Releases.
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
