feat: 支持域名代理转发

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,10 @@
 ssl: true
 hosts:
   "l.j-k.one":
-    port: 81
+    port: 5500
     ip: "127.0.0.1"
     protocol: "http"
+  "l0.j-k.one":
+    port: 443
+    ip: "www.baidu.com"
+    protocol: "https"
