--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ readme = "README.md"
 axum = { version = "0.5.15", features = ["headers"]}
 axum-server = { version = "0.3", features = ["tls-rustls"] }
 hyper = { version = "0.14", features = ["full"] }
+hyper-tls = "0.5.0"
 tokio = { version = "1", features = ["full"] }
 
 serde = { version = "1.0", features = ["derive"] }
