--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "*"
 serde_yaml = "0.9.13"
+validator = { version = "0.15", features = ["derive"] }
 
 jsonpath-rust = "0.1.6"
 convert_case = "0.6.0"
