--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,14 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.5.15", features = ["headers"]}
+axum = { version = "0.5.15", features = ["headers", "ws"]}
 axum-server = { version = "0.3", features = ["tls-rustls"] }
 hyper = { version = "0.14", features = ["full"] }
 hyper-tls = "0.5.0"
 tokio = { version = "1", features = ["full"] }
+tokio-tungstenite = "0.15"
+tungstenite = "0.15"
+futures-util = "0.3"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "*"
@@ -30,3 +33,6 @@ ansi_term = "0.12.1"
 
 pest = "2.0"
 pest_derive = "2.0"
+
+sha1 = "0.10.6"
+base64 = "0.22.1"
