--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,11 @@
 ssl: true
 ssl_port: 443
 # aliyun nginx
-#ssl_key_file: './ssl/l.j-k.one.key'
-#ssl_cert_file: './ssl/l.j-k.one.pem'
+ssl_key_file: './ssl/l.j-k.one.key'
+ssl_cert_file: './ssl/l.j-k.one.pem'
 # porkbun ssl
-ssl_key_file: './ssl/private.key.pem'
-ssl_cert_file: './ssl/domain.cert.pem'
+# ssl_key_file: './ssl/private.key.pem'
+# ssl_cert_file: './ssl/domain.cert.pem'
 hosts:
   "l.j-k.one":
     port: 90
